--- a/src/main/resources/templates/fragments/admin-common.html
+++ b/src/main/resources/templates/fragments/admin-common.html
@@ -23,3 +23,21 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
 <div th:fragment="scripts" xmlns:th="http://www.thymeleaf.org">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </div>
+
+<div th:fragment="admin-nav" xmlns:th="http://www.thymeleaf.org">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm sticky-top">
+        <div class="container">
+            <a class="navbar-brand" th:href="@{/admin/dashboard}">Admin Dashboard</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#adminNavbar" aria-controls="adminNavbar" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="adminNavbar">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a th:href="@{/admin/logout}" class="btn btn-outline-light">Logout</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</div>
